interface and icons

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,6 +27,7 @@
 // @import "components/_inventory";
 @import "components/_dialog";
 
+@import "interface/_icons";
 @import "interface/_layout";
 @import "interface/_buildings";
 
