--- a/src/sass/interface/_layout.scss
+++ b/src/sass/interface/_layout.scss
@@ -1,17 +1,42 @@
-.interface {
+// https://www.toptal.com/designers/subtlepatterns/
+
+.interface--wrapper {
     position: fixed;
     top: 0;
-    right: 0;
+    right: bottom;
     z-index: 99;
-    display: flex;
-    flex-direction: column;
-    // background-color: var(--color-default);
-    padding: 0.5em;
     width: 100%;
     height: 100vh;
+    padding: 0.5em;
+}
+
+.interface {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     pointer-events: none;
 }
 
-.interface > * {
+.interface > header,
+.interface > section,
+.interface > footer {
     pointer-events: all;
+    position: absolute;
+    background-color: #ddd;
+    color: var(--color-secondary);
+    border: 2px solid var(--color-secondary);
+
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.interface > header {
+    display: flex;
+
+    > * {
+        flex: 1;
+        margin: 1rem;
+    }
 }
