--- a/src/sass/base/_layout.scss
+++ b/src/sass/base/_layout.scss
@@ -1,11 +1,6 @@
 [class*="align__"] {
-	position: fixed;
+	position: absolute;
 	display: flex;
-	margin: -0.25rem;
-
-	& > * {
-		margin: 0.25rem;
-	}
 
 	&[class*="left"] {
 		left: 2rem;
@@ -32,25 +27,4 @@
 		left: 50%;
 		transform: translateX(-50%);
 	}
-}
-
-main.interface {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	z-index: 999;
-	opacity: 1;
-
-	transition: opacity .2s ease;
-
-	&[disabled] {
-		pointer-events: none;
-		opacity: 0;
-	}
-}
-
-canvas {
-	background-color: var(--color-secondary);
 }
