--- a/src/html/views/village.html
+++ b/src/html/views/village.html
@@ -1,3 +1,56 @@
 <section id="village" class="interface">
-    <h1>VILLAGE VIEW</h1>
+    <header>
+        <ul class="resources">
+            <li><svg><use xlink:href="#icon-stone"/></svg><span>210</span></li>
+            <li><svg><use xlink:href="#icon-brick"/></svg><span>315</span></li>
+            <li><svg><use xlink:href="#icon-ore"/></svg><span>561</span></li>
+            <li><svg><use xlink:href="#icon-ingot"/></svg><span>125</span></li>
+        </ul>
+        <ul class="resources">
+            <li><svg><use xlink:href="#icon-log"/></svg><span>631</span></li>
+            <li><svg><use xlink:href="#icon-plank"/></svg><span>582</span></li>
+            <li><svg><use xlink:href="#icon-wheat"/></svg><span>420</span></li>
+            <li><svg><use xlink:href="#icon-bread"/></svg><span>1250</span></li>
+        </ul>
+    </header>
+    <footer>
+        <ul class="buildings">
+            <li>
+                <button data-building="castle" data-color="#2d3436" data-size="9,9,9">
+                    <svg><use xlink:href="#icon-castle" /></svg>
+                    <span>Castle</span>
+                </button>
+            </li>
+            <li>
+                <button data-building="house" data-color="#2d3436" data-size="2,2,2">
+                    <svg><use xlink:href="#icon-house" /></svg>
+                    <span>House</span>
+                </button>
+            </li>
+            <li>
+                <button data-building="smith" data-color="#2d3436" data-size="5,3,3">
+                    <svg><use xlink:href="#icon-smith" /></svg>
+                    <span>Smith</span>
+                </button>
+            </li>
+            <li>
+                <button data-building="farm" data-color="#2d3436" data-size="6,3,6">
+                    <svg><use xlink:href="#icon-farm" /></svg>
+                    <span>Farm</span>
+                </button>
+            </li>
+            <li>
+                <button data-building="sawmill" data-color="#2d3436" data-size="2,3,5">
+                    <svg><use xlink:href="#icon-sawmill" /></svg>
+                    <span>Saw Mill</span>
+                </button>
+            </li>
+            <li>
+                <button data-building="stables" data-color="#2d3436" data-size="4,3,6">
+                    <svg><use xlink:href="#icon-stables" /></svg>
+                    <span>Stables</span>
+                </button>
+            </li>
+        </ul>
+    </footer>
 </section>
