--- a/src/sass/base/_app.scss
+++ b/src/sass/base/_app.scss
@@ -3,6 +3,20 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    user-select: none;
+}
+
+// .app, .app * { user-select: none }
+
+.app > header {
+    border-bottom: 0.25rem solid var(--color-secondary);
+    font-size: 0.8rem;
+    font-weight: 300;
+    padding: 0.2rem;
+}
+
+.app > footer {
+    border-top: 0.25rem solid var(--color-secondary);
 }
 
 .view-container {
@@ -35,6 +49,22 @@
     &.interface > * {
         pointer-events: all;
     }
+}
+
+.interface > header,
+.interface > footer {
+    position: absolute;
+    left: 0;
+    display: flex;
+    width: 100%;
+}
+
+.interface > header {
+    top: 0;
+}
+
+.interface > footer {
+    bottom: 0;
 }
 
 .view-container > section.canvas-wrapper {
