--- a/src/sass/base/_layout.scss
+++ b/src/sass/base/_layout.scss
@@ -3,19 +3,19 @@
 	display: flex;
 
 	&[class*="left"] {
-		left: 2rem;
+		left: 0;
 	}
 
 	&[class*="right"] {
-		right: 2rem;
+		right: 0;
 	}
 
 	&[class*="top"] {
-		top: 2rem;
+		top: 0;
 	}
 
 	&[class*="bottom"] {
-		bottom: 2rem;
+		bottom: 0;
 	}
 
 	&[class*="middle"] {
