--- a/src/sass/views/_village.scss
+++ b/src/sass/views/_village.scss
@@ -11,6 +11,7 @@
         display: flex;
         font-size: 0.8rem;
         font-weight: 300;
+        padding: 0.25rem 0.25rem 0.5rem 0.25rem;
     }
 
     footer {
@@ -43,7 +44,6 @@
 
     .resources li {
         display: flex;
-        padding: 0.25rem 0;
     }
 
     .resources svg {
