--- a/src/html/views/village.html
+++ b/src/html/views/village.html
@@ -19,7 +19,11 @@
     </div>
 
     <footer>
-        <ul class="buildings">
+        <div class="building-placement helper">
+            <button name="cancel"><svg><use xlink:href="#icon-cancel" /></svg></button>
+            <button name="confirm"><svg><use xlink:href="#icon-confirm" /></svg></button>
+        </div>
+        <ul class="buildings helper">
             <li>
                 <button data-building="castle" data-color="#2d3436" data-size="9,9,9">
                     <svg><use xlink:href="#icon-castle" /></svg>
