--- a/src/sass/base/_app.scss
+++ b/src/sass/base/_app.scss
@@ -25,15 +25,15 @@ body[data-race="orc"] {
     border-top: 0.25rem solid var(--color-secondary);
 }
 
-.view, .panel, .canvas-wrapper {
+.view, .panel, .helper {
     opacity: 0;
     pointer-events: none;
-    z-index: -1;
+    z-index: 0;
+    transition: opacity .3s ease;
 
     &.active {
         opacity: 1;
-        pointer-events: all;
-        z-index: 1;
+        z-index: 1
     }
 
     &.interface {
@@ -44,16 +44,34 @@ body[data-race="orc"] {
     &.interface > header,
     &.interface > footer {
         pointer-events: all;
+        position: relative;
     }
 }
 
-.view, .panel, .canvas-wrapper {
+.helper:not(.active) button {
+    pointer-events: none;
+}
+
+.view, .panel, .canvas-wrapper, .helper {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: var(--color-default);
+}
+
+.helper {
+    height: auto;
+    transition-property: opacity, transform;
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
+    fill: var(--color-primary);
+    border-top: .25rem solid var(--color-primary);
+
+    &.active {
+        transform: translateY(-100%);
+    }
 }
 
 .view-container, .panel-container {
@@ -64,8 +82,6 @@ body[data-race="orc"] {
 
 .view-container > section.canvas-wrapper {
     pointer-events: all;
-    opacity: 1;
-    z-index: 0;
     font-size: 0;
 }
 
