--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,7 +18,7 @@
 
 // Components
 
-// @import "components/_button";
+@import "components/_button";
 // @import "components/_image";
 // @import "components/_navigation";
 // @import "components/_header";
