--- a/src/html/views/village.html
+++ b/src/html/views/village.html
@@ -1,4 +1,4 @@
-<section id="village" class="view interface">
+<section id="village" class="view interface" data-view="village">
     <header>
         <ul class="resources">
             <li><svg><use xlink:href="#icon-stone"/></svg><span>210</span></li>
@@ -16,6 +16,11 @@
     
     <div class="panel-container">
         @@include('./panels/castle.html')
+        @@include('./panels/house.html')
+        @@include('./panels/smith.html')
+        @@include('./panels/farm.html')
+        @@include('./panels/lumbermill.html')
+        @@include('./panels/stables.html')
     </div>
 
     <footer>
