--- a/src/html/views/world.html
+++ b/src/html/views/world.html
@@ -1,3 +1,3 @@
-<section id="world" class="view interface">
+<section id="world" class="view interface" data-view="world">
     <h1>WORLD VIEW</h1>
 </section>
