--- a/src/sass/base/_layout.scss
+++ b/src/sass/base/_layout.scss
@@ -28,3 +28,42 @@
 		transform: translateX(-50%);
 	}
 }
+
+body {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    background-color: var(--color-secondary);
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
+
+body[data-race="human"] {
+    --color-primary: #aaaaff;
+}
+
+body[data-race="orc"] {
+    --color-primary: #ff7777;
+}
+
+.app, .interface {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    user-select: none;
+}
+
+.app > header {
+    border-bottom: 0.25rem solid var(--color-secondary);
+    font-size: 0.8rem;
+    font-weight: 300;
+    padding: 0.2rem;
+}
+
+.app > footer {
+    border-top: 0.25rem solid var(--color-secondary);
+}
+
+canvas {
+	background-color: var(--color-secondary);
+}
