--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,8 @@
     --color-secondary: #333333;
     --color-default: #f5f5f5;
 
+    --color-primary--light: #fcf2dd;
+
     --rgb-primary: 245, 205, 121;
     --rgb-secondary: 51, 51, 51;
     --rgb-default: 229, 229, 229;
@@ -10,4 +12,8 @@
     // --border-radius: 1rem;
     // --border-radius: 0;
     --border-radius: 0.2rem;
+
+    --pattern-noise: url('./../img/patterns/noise.png');
+    --pattern-paper: url('./../img/patterns/paper.png');
+    --pattern-ricepaper: url('./../img/patterns/ricepaper.png');
 }
